common css done

--- a/themes/socialasset/assets/css/main.css
+++ b/themes/socialasset/assets/css/main.css
@@ -5,6 +5,21 @@
 @import url('_header.css');
 @import url('_page.css');
 @import url('_home.css');
+
+/* Shoriful*/
+
+
+
+/*Milon*/
+
+
+
+/*Prashanto*/
+
+
+
+/*Rannojit*/
+
 @import url('_contact.css');
 @import url('_footer.css');
 
