--- a/themes/socialasset/assets/css/_commons.css
+++ b/themes/socialasset/assets/css/_commons.css
@@ -15,10 +15,12 @@ a, a:hover, a:focus, button:hover, button:focus{
 }
 
 body {
-    background: #f8f8f8;
-    color: #000000;
-    font-size: 18px;
-    line-height: 24px;
+    background: #ffffff;
+    color: #000417;
+    font-size: 17px;
+    line-height: 1;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
 }
 p{
 	line-height: 1.2;
@@ -89,7 +91,7 @@ Containers
 
 }
 .container{
-	max-width: 1200px;
+	max-width: 1270px;
 	width: 100%;
 }
 .container-md{
