--- a/themes/socialasset/assets/css/_typo.css
+++ b/themes/socialasset/assets/css/_typo.css
@@ -2,20 +2,25 @@
 All heading
 */
 h1,h2,h3,h4,h5,h6{
-	line-height: 1;	
+	line-height: 1.2;
+	font-weight: 700;
 }
 h1{
-	font-size: 33px;
+	font-size: 50px;
 }
 h2{
-	font-size: 30px;
+	font-size: 47px;
 }
 h3{
-	font-size: 28px;
+	font-size: 32px;
 }
 h4{
-	font-size: 24px;
+	font-size: 30px;
 }
 h5{
-	font-size: 15px;
+	font-size: 25px;
 }
+h5{
+	font-size: 20px;
+}
+
