--- a/themes/socialasset/assets/css/_commons.css
+++ b/themes/socialasset/assets/css/_commons.css
@@ -35,12 +35,12 @@ data-value = normal*/
 /**
 Containers fluid
 */
-/*.container-fluid{
+.container-fluid{
 	padding-left: 30px;
 	padding-right: 30px;
 	margin-left: 2%;
 	margin-right: 2%;
-  
+  	width: auto;
 }
 .container-fluid .row{
 	margin-left: -30px;
@@ -53,7 +53,7 @@ Containers fluid
 .container-fluid .row .col-xs-1, .container-fluid .row .col-xs-10, .container-fluid .row .col-xs-11, .container-fluid .row .col-xs-12, .container-fluid .row .col-xs-2, .container-fluid .row .col-xs-3, .container-fluid .row .col-xs-4, .container-fluid .row .col-xs-5, .container-fluid .row .col-xs-6, .container-fluid .row .col-xs-7, .container-fluid .row .col-xs-8, .container-fluid .row .col-xs-9{
 	padding-left: 30px;
 	padding-right: 30px;
-}*/
+}
 
 
 /**
