--- a/themes/socialasset/assets/css/_header.css
+++ b/themes/socialasset/assets/css/_header.css
@@ -1,3 +1,128 @@
+header.header{
+	padding: 25px 0 20px;
+}
+
+.hdr-lft{
+	float: left;
+	width: 30%;
+}
+.hdr-rgt{
+	float: right;
+	width: 70%;
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+}
+
+.logo a{
+	display: inline-block;
+	vertical-align: baseline;
+	width: 278px;
+}
+.logo a img{
+	width: 100%;
+}
+.hdr-top-navbar ul{
+	padding-right: 20px;
+}
+.hdr-top-navbar ul li{
+	display: inline-block;
+	vertical-align: baseline;
+	padding: 0 15px;
+	position: relative;
+}
+.hdr-top-navbar ul li a{
+	color: #000000;
+	font-size: 14px;
+	font-weight: 700;
+}
+.hdr-top-navbar ul li:nth-child(1){
+	padding-right: 20px;
+}
+.hdr-top-navbar ul li:nth-child(2){
+	padding-left: 20px;
+}
+.hdr-top-navbar ul li:nth-child(1):after{
+	content: "";
+	height: 25px;
+	width: 1px;
+	background: #bcbcbc;
+	position: absolute;
+	right: 0;
+	top: -4px;
+}
+.humberger-menu-btn{
+	text-align: center;
+	cursor: pointer;
+}
+.humberger-menu-btn strong{
+	padding-bottom: 10px;
+	font-size: 10px;
+	line-height: 12px;
+	text-transform: uppercase;
+	font-weight: 500;
+	display: block;
+}
+.hdr-btns{
+	padding-right: 20px;
+}
+.login-btn{
+	background: #EAEAEA;
+	width: 110px;
+	height: 50px;
+	padding: 5px;
+	color: #000000;
+	text-transform: uppercase;
+	font-size: 14px;
+	line-height: 16px;
+	font-weight: 700;
+	cursor: pointer;
+	display: inline-block;
+	vertical-align: baseline;
+	margin-right: 15px;
+}
+.campaign-btn{
+	background: #0055FF;
+	width: 190px;
+	height: 50px;
+	padding: 5px;
+	color: #fff;
+	font-size: 14px;
+	line-height: 16px;
+	font-weight: 900;
+	cursor: pointer;
+	display: inline-block;
+	vertical-align: baseline;	
+}
+
+.humberger-menu-btn-lines{
+	width: 33px;
+	position: relative;
+	height: 20px;
+}
+.humberger-menu-btn-lines span{
+	position: absolute;
+	left: 0;
+	right: 0;
+	height: 2px;
+	background: #000000;
+	top: 0;
+}
+.humberger-menu-btn-lines span:nth-child(2){
+	top: 8px;
+}
+.humberger-menu-btn-lines span:nth-child(3){
+	top: 16px;
+}
+
+
+.humberger-menu-btn,
+.hdr-btns,
+.hdr-top-navbar{
+	display: inline-block;
+	vertical-align: baseline;
+}
+
 nav.main-nav ul{
 
 }
