--- a/themes/socialasset/assets/css/_header.css
+++ b/themes/socialasset/assets/css/_header.css
@@ -1,5 +1,5 @@
 header.header{
-	padding: 25px 0 20px;
+	padding: 25px 0 0;
 }
 
 .hdr-lft{
@@ -10,7 +10,6 @@ header.header{
 	float: right;
 	width: 70%;
 	display: flex;
-	align-items: center;
 	justify-content: flex-end;
 }
 
@@ -22,27 +21,40 @@ header.header{
 .logo a img{
 	width: 100%;
 }
-.hdr-top-navbar ul{
+.main-nav > ul{
+	padding-top: 15px;
 	padding-right: 20px;
 }
-.hdr-top-navbar ul li{
+.main-nav ul li{
 	display: inline-block;
 	vertical-align: baseline;
 	padding: 0 15px;
 	position: relative;
 }
-.hdr-top-navbar ul li a{
+.main-nav > ul > li{
+	
+}
+.main-nav > ul > li > a{
 	color: #000000;
 	font-size: 14px;
 	font-weight: 700;
+	display: inline-block;
+	vertical-align: baseline;
+	position: relative;
+	padding-bottom: 40px;
+	padding-left: 2px;
+	padding-right: 2px;
 }
-.hdr-top-navbar ul li:nth-child(1){
+.main-nav > ul > li > a:hover{
+	color: #0055FF;
+}
+.main-nav > ul > li:nth-child(1){
 	padding-right: 20px;
 }
-.hdr-top-navbar ul li:nth-child(2){
+.main-nav ul li:nth-child(2){
 	padding-left: 20px;
 }
-.hdr-top-navbar ul li:nth-child(1):after{
+.main-nav > ul > li:nth-child(1):after{
 	content: "";
 	height: 25px;
 	width: 1px;
@@ -51,6 +63,106 @@ header.header{
 	right: 0;
 	top: -4px;
 }
+.main-nav > ul > li > a:after{
+    border-bottom: 4px solid #0055FF;
+    content: "";
+    display: block;
+    height: 3px;
+    left: 0;
+    position: absolute;
+    bottom: 0;
+    transform: scale(0, 1);
+    -ms-transform: scale(0, 1);
+    -webkit-transform: scale(0, 1);
+    transform-origin: center center 0;
+    transition: all 0.15s ease-out 0s;
+    width: 100%;
+}
+.main-nav > ul > li > a:hover:after{
+    transform: scale(1, 1);
+}
+
+.main-nav > ul > li.menu-item-has-children:after{
+    content: "\f107";
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 600;
+    text-decoration: inherit;
+/*--adjust as necessary--*/
+    color: #000;
+    font-size: 14px;
+    position: absolute;
+    top: 3px;
+    right: 0;
+}
+.main-nav > ul > li.menu-item-has-children:hover:after{
+	content: "\f106";
+}
+
+nav.main-nav > ul > li.menu-item-has-children > ul.sub-menu{
+	position: absolute;
+	top: 100%;
+	left: 0;
+	min-width: 205px;
+	padding: 5px 0 0 0;
+	background: #fff;
+	z-index: 30;
+	box-shadow: 0 11px 10px 0 rgba(0, 0, 0, 0.15);
+	-ms-box-shadow: 0 11px 10px 0 rgba(0, 0, 0, 0.15);
+	-webkit-box-shadow: 0 11px 10px 0 rgba(0, 0, 0, 0.15);
+    transform: scale3d(1,0,1);
+    -ms-transform: scale3d(1,0,1);
+    -webkit-transform: scale3d(1,0,1);
+    transition: all .5s;
+    -ms-transition: all .5s;
+    -webkit-transition: all .5s;
+    transform-origin: top;
+    -ms-transform-origin: top;
+    -webkit-transform-origin: top;
+    opacity: 0;
+}
+nav.main-nav > ul > li.menu-item-has-children:hover > ul.sub-menu{
+    transform: scale3d(1,1,1);
+    -ms-transform: scale3d(1,1,1);
+    -webkit-transform: scale3d(1,1,1);
+    opacity: 1;
+}
+nav.main-nav ul.sub-menu li{
+	padding: 0 0 0 0;
+	display: block;
+	position: relative;
+	border-bottom: 1px solid #eee;
+}
+nav.main-nav ul.sub-menu li a{
+	color: #9e9ea1;
+	font-size: 14px;
+	display: block;
+	padding: 10px 20px;
+}
+
+nav.main-nav ul.sub-menu li:before {
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 2px;
+    height: 0;
+    background: #0055FF;
+    -webkit-transition: all .3s;
+    -o-transition: all .3s;
+    transition: all .3s;
+}
+nav.main-nav ul.sub-menu li:hover:before {
+    height: 100%;
+}
+
+nav.main-nav ul li:hover a,
+nav.main-nav ul li.current-menu-item a{
+	color: #0055FF;
+}
+
+
 .humberger-menu-btn{
 	text-align: center;
 	cursor: pointer;
@@ -70,7 +182,7 @@ header.header{
 	background: #EAEAEA;
 	width: 110px;
 	height: 50px;
-	padding: 5px;
+	padding: 3px 5px 0;
 	color: #000000;
 	text-transform: uppercase;
 	font-size: 14px;
@@ -85,7 +197,7 @@ header.header{
 	background: #0055FF;
 	width: 190px;
 	height: 50px;
-	padding: 5px;
+	padding: 3px 5px 0;
 	color: #fff;
 	font-size: 14px;
 	line-height: 16px;
@@ -123,33 +235,4 @@ header.header{
 	vertical-align: baseline;
 }
 
-nav.main-nav ul{
 
-}
-nav.main-nav ul li{
-	
-}
-nav.main-nav ul li a{
-	
-}
-nav.main-nav > ul{
-
-}
-nav.main-nav > ul > li{
-
-}
-nav.main-nav > ul > li > a{
-
-}
-
-nav.main-nav > ul > li.current-menu-item > a{
-
-}
-
-nav.main-nav > ul > li.menu-item-has-children > a{
-
-}
-
-nav.main-nav > ul > li.menu-item-has-children ul.sub-menu{
-	
-}
