--- a/themes/socialasset/assets/css/_faq.css
+++ b/themes/socialasset/assets/css/_faq.css
@@ -52,4 +52,103 @@ box-shadow: 0px 7px 17px 0px rgba(223,226,232,1);
 	font-size: 21px;
 	text-align: center;
 	font-weight: 400;
+	margin-bottom: 60px;
+}
+
+
+.hh-accordion-title{
+	font-size: 16px;
+	font-weight: 400;
+	padding-top: 30px;
+	padding-bottom: 25px;
+	margin: 0;
+	position: relative;
+	border-top: 1px solid #ccd1d4;
+	position: relative;
+	cursor: pointer;
+}
+.hh-accordion-title:after{
+	content: "";
+	position: absolute;
+	top: 50%;
+	right: 35px;
+	transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+	background: url(../images/plus-icon.png);
+	width: 20px;
+	height: 20px;
+	background-repeat: no-repeat;
+	background-position: center center;
+}
+.hh-accordion-title.hh-accordion-active:after{
+	background: url(../images/minus-icon.png);
+	background-repeat: no-repeat;
+	background-position: center center;
+}
+.hh-accordion-title,
+.hh-accordion-des{
+	padding-left: 50px;
+	padding-right: 40px;
+}
+.hh-accordion-des,
+.hh-accordion-title.hh-accordion-active{
+	background: #fff;
+}
+.hh-accordion-title.hh-accordion-active{
+	border-top: 0;
+	border-radius: 5px 5px;
+	font-weight: 700;
+}
+.hh-accordion-des{
+	padding-bottom: 10px;
+	padding-top: 20px;
+	border-radius: 0 0 5px 5px;
+	-webkit-box-shadow: 0px 7px 17px 0px rgba(233,234,238,1);
+	-moz-box-shadow: 0px 7px 17px 0px rgba(233,234,238,1);
+	box-shadow: 0px 7px 17px 0px rgba(233,234,238,1);
+}
+.remove-border .hh-accordion-title{
+	border-top: 0;
+}
+.hh-accordion-des p{
+	margin-bottom: 50px;
+}
+.video-play{
+	margin-bottom: 40px;
+}
+.video-play a img {
+	width: 100%;
+}
+.video-play a{
+	position: relative;
+	cursor: pointer;
+	display: block;
+	overflow: hidden;
+}
+.video-play img{
+	width: 100%;
+}
+.video-play a:hover img {
+    transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -o-transform: scale(1.1);
+}
+.video-play a:after{
+	content: '';
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%,-50%);
+	-ms-transform: translate(-50%,-50%);
+	-webkit-transform: translate(-50%,-50%);
+	background-color: rgba(114,125,132,.6);
+	background-image: url(../images/vdo-play-icon.png);
+	background-repeat: no-repeat;
+	background-position: center center;
+	width: 100px;
+	height: 100px;
+	opacity: 1;
+	border-radius: 100% 100%;
 }
