user-campaign-list page start

--- a/themes/socialasset/assets/css/main.css
+++ b/themes/socialasset/assets/css/main.css
@@ -21,6 +21,7 @@
 /*Rannojit*/
 @import url('_faq.css');
 @import url('_terms.css');
+@import url('_campaign-list.css');
 
 
 @import url('_contact.css');
