--- a/themes/socialasset/assets/css/_commons.css
+++ b/themes/socialasset/assets/css/_commons.css
@@ -245,6 +245,8 @@ form  .dropdown-menu li a{
 .dropdown-menu>.active>a, 
 .dropdown-menu>.active>a:focus, 
 .dropdown-menu>.active>a:hover{
-	background-color: #710023;
+	background-color: #0054FD;
 }
+
+
 
