--- a/themes/socialasset/assets/css/main.css
+++ b/themes/socialasset/assets/css/main.css
@@ -23,6 +23,7 @@
 @import url('_faq.css');
 @import url('_terms.css');
 @import url('_campaign-list.css');
+@import url('_login-register.css');
 
 
 @import url('_contact.css');
