--- a/themes/socialasset/assets/css/_home.css
+++ b/themes/socialasset/assets/css/_home.css
@@ -77,6 +77,7 @@
 
 
 .hm-banner-design-2 h2{
+	font-family: "NeutrafaceTextBold";
 	padding-top: 330px;
 	padding-bottom: 50px;
 	max-width: 800px;
