--- a/themes/socialasset/assets/css/_home.css
+++ b/themes/socialasset/assets/css/_home.css
@@ -1,13 +1,43 @@
+.hm-banner-slider-sec{
+	overflow: hidden;
+}
 .hm-banner-slider-item{
 	background-position: center center!important;
 	background-size: cover!important;
 	background-repeat: no-repeat!important;
 	min-height: 872px;
+	position: relative;
+	z-index: 1;
+}
+.hm-banner-slider-item span.hm-banner-slider-overlay{
+	display: inline-block;
+	vertical-align: baseline;
+	position: absolute;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: #000;
+	opacity: .6;
+	z-index: 2;
+}
+.hm-banner-slider-item span.hm-banner-slider-rb-icon{
+	display: inline-block;
+	vertical-align: baseline;
+	position: absolute;
+	right: -30px;
+	bottom: -20px;
+	z-index: 3;	
+	max-width: 370px;
+}
+.hm-banner-slider-item span.hm-banner-slider-rb-icon img{
+	width: 100%
 }
 .hm-banner-design-1 .hm-banner-slider-item-innr{
 	padding-top: 220px;
 	padding-bottom: 50px;
 	max-width: 950px;
+	position: relative;
+	z-index: 4
 }
 .hm-banner-design-1 .hm-banner-slider-item-lft-bg{
 	width: 46%;
@@ -73,18 +103,37 @@
 	margin: 0 auto;
 	text-align: center;
 	color: #fff;
+	position: relative;
+	z-index: 4
 }
-
+ /* 'NeutrafaceTextBold' font face add korci, push kora ache */
 
 .hm-banner-design-2 h2{
-	font-family: "NeutrafaceTextBold";
-	padding-top: 330px;
-	padding-bottom: 50px;
-	max-width: 800px;
-	margin: 0 auto;
-	text-align: center;
+	/* font-family: "NeutrafaceTextBold"; */
+	margin-bottom: 38px;
+	text-transform: uppercase;
+	font-weight: 700;
+	line-height: 55px;
+
 }
 
+.hm-banner-design-2 a{
+	display: inline-block;
+	vertical-align: baseline;
+	text-transform: uppercase;
+	font-size: 12px;
+	font-weight:900;
+	line-height: 15px;
+	padding: 16px 70px;
+	color: #fff;
+	background: #0055FF;
+	border:  2px solid #0055FF;
+	border-radius: 60px;
+}
+.hm-banner-design-2 a:hover{
+	background: #fff;
+	color: #0055FF;
+}
 
 
 
