--- a/themes/socialasset/assets/css/_login-register.css
+++ b/themes/socialasset/assets/css/_login-register.css
@@ -4,6 +4,7 @@
 	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
+	position: relative;
 }
 .login-businesses-form-hdr{
 	text-align: center;
@@ -18,15 +19,17 @@
 	background: #fff;
 	border-radius: 10px;
 	padding: 55px 50px;
+	-webkit-box-shadow: 0px 7px 32px 0px rgba(219,220,225,1);
+-moz-box-shadow: 0px 7px 32px 0px rgba(219,220,225,1);
+box-shadow: 0px 7px 32px 0px rgba(219,220,225,1);
+position: relative;
+z-index: 5;
 }
 
 .fl-tabs{
 	border-bottom: 3px solid #efefef;
 }
 
-.tab-con-inr{
-	display: none;
-}
 button.tab-link{
 	padding: 0 15px 10px;
 	position: relative;
@@ -60,5 +63,164 @@ button.tab-link:after{
 }
 button.tab-link:hover:after,
 button.tab-link.current:after{
+	width: 100%;
+}
+.fl-tab-content{
+	display: none;
+}
+.fl-tab-content.current{
+	display: block;
+}
+
+.login-businesses-form-cntlr .tab-con-inr{
+	padding-top: 45px;
+}
+.sa-input input[type="text"],
+.sa-input input[type="email"],
+.sa-input input[type="number"],
+.sa-input input[type="password"]{
+	background: #f7f7f7;
+	width: 100%;
+	height: 50px;
+	padding: 18px 20px;
+	font-size: 14px;
+	line-height: 20px;
+}
+
+
+
+
+
+.sa-input input[type="text"],
+.sa-input input[type="email"],
+.sa-input input[type="number"],
+.sa-input input[type="password"]::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: #727272;
+  opacity: 1;
+}
+.sa-input input[type="text"],
+.sa-input input[type="email"],
+.sa-input input[type="number"],
+.sa-input input[type="password"]::-moz-placeholder { /* Firefox 19+ */
+  color: #727272;
+  opacity: 1;
+}
+.sa-input input[type="text"],
+.sa-input input[type="email"],
+.sa-input input[type="number"],
+.sa-input input[type="password"]:-ms-input-placeholder { /* IE 10+ */
+  color: #727272;
+  opacity: 1;
+}
+.sa-input input[type="text"],
+.sa-input input[type="email"],
+.sa-input input[type="number"],
+.sa-input input[type="password"]:-moz-placeholder { /* Firefox 18- */
+  color: #727272;
+  opacity: 1;
+}
+.fl-input-field-row label{
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 20px;
+	color: #202124;
+	padding-bottom: 8px;
+	display: block;
+	margin: 0;
+}
+.fl-input-field-row{
+	padding-bottom: 20px;
+}
+.fl-forget-row{
+	text-align: right;
+	padding: 0 0 15px;
+}
+.fl-forget-row a{
+	font-size: 12px;
+	line-height: 14px;
+	color: #202124;
+	text-decoration: underline;
+}
+
+.fl-submit-btn input[type="submit"]{
+	background: #0055FF;
+	border-radius: 5px;
+	color: #fff;
+	font-weight: 900;
+	font-size: 14px;
+	line-height: 16px;
+	text-align: center;
+	cursor: pointer;
+	height: 50px;
+}
+.w-full input[type="submit"]{
+	width: 100%;
+}
+
+.fl-or-text{
+	text-align: center;
+	position: relative;
+	margin: 28px 0 30px;
+}
+.fl-or-text:after{
+	content: "";
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 50%;
+	transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+	background: #EFEFEF;
+	height: 3px;
+	z-index: 1;
+}
+.fl-or-text span{
+	background: #fff;
+	padding: 5px 20px;
+	position: relative;
+	z-index: 2;
+	font-size: 14px;
+	line-height: 16px;
+	display: inline-block;
+	vertical-align: baseline;
+	color: #46505C;
+}
+
+.fl-sign-in-another a{
+	display: block;
+	border: 1px solid #d8dcdf;
+	padding: 18px 20px 12px;
+	text-align: center;
+	color: #46505C;
+	margin-bottom: 15px;
+	border-radius: 3px;
+	position: relative;
+	font-weight: 500;
+}
+.fl-sign-in-another a:last-child{
+	margin-bottom: 0;
+}
+.fl-sign-in-another a i{
+	position: absolute;
+	left: 18px;
+	top: 50%;
+	transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+}
+
+.login-form-clip{
+	position: absolute;
+	z-index: 1;
+	left: 50%;
+	transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
+	bottom: -50px;
+	max-width: 460px;
+	height: 280px;
+}
+.login-form-clip img{
 	width: 100%;
 }
