--- a/themes/socialasset/assets/css/_login-register.css
+++ b/themes/socialasset/assets/css/_login-register.css
@@ -1,3 +1,6 @@
+.content-center-cntlr{
+	position: relative;
+}
 .login-businesses-form-cntlr{
 	padding: 95px 0 185px;
 	max-width: 470px;
@@ -72,7 +75,7 @@ button.tab-link.current:after{
 	display: block;
 }
 
-.login-businesses-form-cntlr .tab-con-inr{
+.tab-con-inr{
 	padding-top: 45px;
 }
 .sa-input input[type="text"],
@@ -153,6 +156,9 @@ button.tab-link.current:after{
 	cursor: pointer;
 	height: 50px;
 }
+.fl-submit-btn input[type="submit"]:hover{
+	background-color: #000000;
+}
 .w-full input[type="submit"]{
 	width: 100%;
 }
@@ -194,7 +200,7 @@ button.tab-link.current:after{
 	text-align: center;
 	color: #46505C;
 	margin-bottom: 15px;
-	border-radius: 3px;
+	border-radius: 5px;
 	position: relative;
 	font-weight: 500;
 }
@@ -217,10 +223,64 @@ button.tab-link.current:after{
 	transform: translateX(-50%);
 	-ms-transform: translateX(-50%);
 	-webkit-transform: translateX(-50%);
-	bottom: -50px;
+	bottom: -105px;
+	top: auto;
 	max-width: 460px;
 	height: 280px;
 }
 .login-form-clip img{
 	width: 100%;
+}
+a.gogle-login-btn:hover{
+	background: #EA4335;
+	color: #fff;
+}
+
+a.linkedin-login-btn:hover{
+	background: #365699;
+	color: #fff;
+}
+
+
+.login-form-lft-col{
+	float: left;
+	width: 50%;
+}
+.login-page-rgt-fea-img{
+	float: left;
+	width: 50%;
+	position: absolute;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	background-size: cover!important;
+	background-repeat: no-repeat!important;
+	background-position: center center!important;
+}
+
+.fl-login-clip{
+	position: absolute;
+	left: 50%;
+	top: auto;
+	transform: translateX(-50%);
+	-ms-transform: translateX(-50%);
+	-webkit-transform: translateX(-50%);
+	bottom: -105px;
+	z-index: 1;
+}
+.fl-login-form{
+	background: #fff;
+    border-radius: 10px;
+    padding: 55px 50px;
+    -webkit-box-shadow: 0px 7px 32px 0px rgba(219,220,225,1);
+    -moz-box-shadow: 0px 7px 32px 0px rgba(219,220,225,1);
+    box-shadow: 0px 7px 32px 0px rgba(219,220,225,1);
+    position: relative;
+    z-index: 5;
+    max-width: 460px;
+    width: 100%;
+    float: right;
+}
+.login-form-lft-col{
+	padding: 165px 200px 190px 0;
 }
