--- a/themes/socialasset/assets/css/_login-register.css
+++ b/themes/socialasset/assets/css/_login-register.css
@@ -284,3 +284,53 @@ a.linkedin-login-btn:hover{
 .login-form-lft-col{
 	padding: 165px 200px 190px 0;
 }
+
+.register-hdr-con{
+	text-align: center;
+	padding-bottom: 30px;
+}
+.register-hdr-con strong{
+	display: block;
+	text-transform: uppercase;
+	color: #000;
+	font-size: 16px;
+	line-height: 20px;
+	padding-bottom: 10px;
+	margin-bottom: 0;
+}
+.register-hdr-con span{
+	display: inline-block;
+	vertical-align: baseline;
+	font-size: 12px;
+	line-height: 16px;
+}
+.register-hdr-con span a{
+	color: #202124;
+	text-decoration: underline;
+}
+
+.register-type-btn button{
+	border: 1px solid #0055FF;
+	display: block;
+	margin-bottom: 15px;
+	border-radius: 5px;
+	font-weight: 700;
+	color: #0055FF;
+	font-size: 16px;
+	line-height: 20px;
+	width: 100%;
+	background: transparent;
+	display: flex;
+	align-items: center;
+	padding: 0 20px;
+	position: relative;
+	height: 50px;
+	cursor: pointer;
+}
+
+.register-type-btn button:last-child{
+	margin-bottom: 0;
+}
+.register-type-btn button span{
+	font-weight: 400;
+}
